feat: update multiselect component to disable multiple selection and improve dropdown behavior

--- a/projects/demo/src/app/components/table-sample/table-sample.component.html
+++ b/projects/demo/src/app/components/table-sample/table-sample.component.html
@@ -46,6 +46,7 @@
                 label="Representante"
                 [options]="representativeOptions"
                 [(ngModel)]="selectedRepresentative"
+                [multiple]="false"
               ></nba-multiselect>
           </ng-template>
         </th>
