--- a/projects/ng-bootstrap-addons/selects/src/multiselect/multiselect.component.html
+++ b/projects/ng-bootstrap-addons/selects/src/multiselect/multiselect.component.html
@@ -3,7 +3,7 @@
       <div class="form-group" [class]="formGroupClass()">
         <div class="input-group">
           <ng-content select="[group-prefix]"></ng-content>
-          <div class="form-floating" [class]="'form-floating-' + size()" #dropdown  dropdown container="body" [insideClick]="true">
+          <div class="form-floating" [class]="'form-floating-' + size()" #dropdown  dropdown [insideClick]="true">
             <select
                 [name]="inputId()"
                 [id]="inputId()"
