feat: add ngModelChange event handler to ac-search-sample component and initialize dateRange in date-range-picker component

--- a/projects/demo/src/app/components/ac-search-sample/ac-search-sample.component.html
+++ b/projects/demo/src/app/components/ac-search-sample/ac-search-sample.component.html
@@ -5,6 +5,7 @@
         [map]="mapConfig"
         searchName="s"
         [(ngModel)]="selectedMovie"
+        (ngModelChange)="onModelChange($event)"
         [resultPath]="{lov: 'Search'}"
         [required]="true">
     </nba-ac-lov>
