--- a/projects/ng-bootstrap-addons/inputs/src/date-range-picker/date-range-picker.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/date-range-picker/date-range-picker.component.html
@@ -1,9 +1,9 @@
-<!-- date-range-picker.component.html -->
 @defer (on viewport; prefetch on idle){
     @if(control){
         <div class="form-group position-relative" [class]="formGroupClass()">
             <div class="form-floating can-click" [class]="'form-floating-' + size()">
                 <input
+                    type="text"
                     bsDaterangepicker
                     #input
                     [bsConfig]="bsConfigs()"
@@ -28,7 +28,6 @@
                         'ng-valid': (control.valid && control.touched),
                         'ng-invalid': (control.invalid && control.touched),
                     }"
-                    [attr.aria-expanded]="!isCollapsed()"
                     (blur)="markAsTouched()"
                 >
                     
