--- a/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/ac-search-lov.component.scss
+++ b/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/ac-search-lov.component.scss
@@ -24,3 +24,17 @@
       mask-position: center;
   }
 }
+
+
+
+// .form-floating.is-invalid .form-control {
+//   border-color: var(--sm-form-invalid-border-color) !important;
+//   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23fa3b1d'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23fa3b1d' stroke='none'/%3e%3c/svg%3e");
+//   background-repeat: no-repeat;
+//   background-position: right calc(.375em + .1875rem) center;
+//   background-size: calc(.75em + .375rem) calc(.75em + .375rem);
+// }
+
+// .form-floating.is-invalid .form-control:focus {
+//   box-shadow: 0 0 0 .25rem rgba(var(--sm-danger-rgb), .25);
+// }
