--- a/projects/ng-bootstrap-addons/src/styles/index.scss
+++ b/projects/ng-bootstrap-addons/src/styles/index.scss
@@ -204,3 +204,23 @@ bs-daterangepicker-container, bs-datepicker-container{
 bs-dropdown-container{
   z-index: 9999 !important;
 }
+
+.form-floating.is-invalid .form-control,
+.form-group.is-invalid .form-control {
+  border-color: var(--#{$prefix}form-invalid-border-color) !important;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23fa3b1d'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23fa3b1d' stroke='none'/%3e%3c/svg%3e") !important;
+}
+.form-floating.is-invalid .form-control:focus,
+.form-group.is-invalid .form-control:focus {
+  box-shadow: 0 0 0 .25rem rgba(var(--#{$prefix}danger-rgb), .25) !important;
+}
+
+.form-floating.is-valid .form-control,
+.form-group.is-valid .form-control {
+  border-color: var(--#{$prefix}form-valid-border-color) !important;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2325b003' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1'/%3e%3c/svg%3e") !important;
+}
+.form-floating.is-valid .form-control:focus,
+.form-group.is-valid .form-control:focus {
+  box-shadow: 0 0 0 .25rem rgba(var(--#{$prefix}success-rgb), .25) !important;
+}
