refactor: remove ngModelChange and onPerformed event handlers from ac-search-sample component; update date-range-picker component to remove readonly attribute and adjust class binding

--- a/projects/ng-bootstrap-addons/inputs/src/date-range-picker/date-range-picker.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/date-range-picker/date-range-picker.component.html
@@ -13,12 +13,11 @@
                     (bsValueChange)="onDatePickerChange($event)"
                     [disabled]="control.disabled"
                     [required]="isRequired"
-                    [readOnly]="readonly()"
                     class="form-control"
                     [mask]="inputMask()"
                     [id]="inputId()"
                     [name]="inputId() + '_display'" 
-                    [class]="inputClass()"
+                    [ngClass]="inputClass()"
                     [placeholder]="label()"
                     [ngClass]="{
                         'ng-touched': control.touched,
