--- a/projects/demo/src/app/components/date-range-picker-sample/date-range-picker-sample.component.html
+++ b/projects/demo/src/app/components/date-range-picker-sample/date-range-picker-sample.component.html
@@ -3,6 +3,7 @@
         label="Data"
         withTime
         [(ngModel)]="dateRange"
+        (ngModelChange)="onValueChange($event)"
         required
     ></nba-date-range-picker>
 </app-sample-container>
