feat: implement ngModelChange event handling and propagate value changes in various input components

--- a/projects/demo/src/app/components/input-sample/input-sample.component.html
+++ b/projects/demo/src/app/components/input-sample/input-sample.component.html
@@ -3,6 +3,7 @@
         icon="ti ti-file"
         label="Default Input"
         [(ngModel)]="defaultInput"
+        (ngModelChange)="onModelChange($event)"
     />
     <hr>
     <nba-input
