--- a/projects/ng-bootstrap-addons/inputs/src/input/input.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/input/input.component.html
@@ -1,14 +1,14 @@
 @defer (on viewport; prefetch on idle){
   @if(control){
-    <div class="form-group" [class]="formGroupClass()">
+    <div class="form-group" [ngClass]="formGroupClass()">
       <div class="input-group">
         <ng-content select="[group-prefix]"></ng-content>
-        <div class="form-floating" [class]="'form-floating-' + size()">
+        <div class="form-floating" [ngClass]="'form-floating-' + size()">
             @if(password()){
               <input
                 type="password"
                 input-password
-                [class]="inputClass()"
+                [ngClass]="inputClass()"
                 class="form-control"
                 [formControl]="control"
                 [id]="inputId()"
@@ -23,7 +23,7 @@
                   type="text"
                   class="form-control"
                   [formControl]="control"
-                  [class]="inputClass()"
+                  [ngClass]="inputClass()"
                   [id]="inputId()"
                   [name]="inputId()"
                   [placeholder]="label()"
@@ -37,7 +37,7 @@
                 <input
                   [type]="type()"
                   class="form-control"
-                  [class]="inputClass()"
+                  [ngClass]="inputClass()"
                   [formControl]="control"
                   [id]="inputId()"
                   [name]="inputId()"
@@ -53,7 +53,7 @@
             @if(label() || icon()){
               <label [for]="inputId()" [class.required]="isRequired">
                   @if(icon()){
-                          <i [class]="'ti mb-0 ' + icon()"></i>
+                          <i [ngClass]="'ti mb-0 ' + icon()"></i>
                   }
                   {{label()}}
               </label>
