--- a/projects/ng-bootstrap-addons/table/src/components/column-header/column-header.component.html
+++ b/projects/ng-bootstrap-addons/table/src/components/column-header/column-header.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center gap-1 w-100 position-relative"
-  dropdown #dropdown="bs-dropdown" [insideClick]="true" container="body"
+  dropdown #dropdown="bs-dropdown" [autoClose]="false" [insideClick]="true" container="body"
 >
   
   <ng-content></ng-content>
