feat: add masked input component with specific mask format

--- a/projects/demo/src/app/components/input-sample/input-sample.component.html
+++ b/projects/demo/src/app/components/input-sample/input-sample.component.html
@@ -20,6 +20,12 @@
     />
     <hr>
     <nba-input
+        label="Masked Input"
+        mask="000.000.000-00"
+        [(ngModel)]="defaultInput"
+    />
+    <hr>
+    <nba-input
         label="Disabled Input"
         disabled
         [(ngModel)]="defaultInput"
