feat: add gallery component with modal functionality and toggle directive

--- a/projects/demo/src/app/pages/samples/samples.component.html
+++ b/projects/demo/src/app/pages/samples/samples.component.html
@@ -69,7 +69,11 @@
             <td><a href="#pagination">Pagination</a></td>
           </tr>
           <tr>
-            <td>#14</td>
+            <td>#15</td>
+            <td><a href="#gallery">Gallery</a></td>
+          </tr>
+          <tr>
+            <td>#16</td>
             <td><a href="#table">Table</a></td>
           </tr>
         </tbody>
@@ -213,6 +217,16 @@
         Ideal for managing large datasets and improving user experience.
       </p>
       <app-pagination-sample></app-pagination-sample>
+    </section>
+
+    <section id="gallery" class="pb-3 pt-3">
+      <h3 class="fw-bold text-uppercase text-primary">Gallery Component</h3>
+      <p class="text-muted mb-3">
+        A sleek gallery component for displaying images in a modal with carousel functionality. 
+        Supports image thumbnails, navigation controls, and responsive design. 
+        Features smooth transitions, keyboard navigation, and seamless integration with Angular applications.
+      </p>
+      <app-gallery-sample></app-gallery-sample>
     </section>
 
     <section id="table" class="pb-3 pt-3">
